@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 cdc3e63e78d1fa29bc289bd525e0087dd0cb371b ChangeLog
+SHA1 f282c0f18810ec7a8d3b873ba49ea34d4996f22a ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 6135a0558fad48facd31f0c20d2fde4fc3c07647 META.yml
-SHA1 0da286fa9a801c3035e44577e39d32fe5e75ce8e Makefile.PL
+SHA1 c6c0ad3329f83e8bf621fbe91a1b5e4c3e7b7976 META.yml
+SHA1 e327f530d7e8d7230fa6119dbed78e5e913eb460 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 5e6383b6877fe6d8ace66d15f96ec8915d82f6f7 lib/Net/FullAuto.pm
+SHA1 0c44cf231fd9ddf2e0245fe8fb4e1c0824244975 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTpavWAAoJEBa/9Pad787ESr0H/2kx4iKMwp2HcO0TDD39vs74
-iw3Ov9UD3YHKRRtjiCRzbI2opoMuKMQSxWo0gJCwT1bWFgnYLmStH7lW5ui/LWWy
-8CdN9NZK/g/G95VpF1uuSPCugBfRIIpaS1vJTz2U6G0IDIoVSKXxOZff9bMivFf3
-OnQfyIwomRbbuLNPKp3TFSf2XEFjio9mz0eCYDyVAfWr5YHhdlT3O7lZSl6urOGz
-rrhW8CH6vQbrGPJm39eLjutonVrEIQRYnh3sd1lsVy9fCeFVGRoyZccnUZY1pVqb
-0flF2bwt35oMwV3UdLSL60A9rdsmt6P5iT+9C1eHPYZCBC+g75Kxq5BFSvXDvbU=
-=p8HD
+iQEcBAEBAgAGBQJTpbFoAAoJEBa/9Pad787ETJsH/RlfuF01qo3J+y4S/L2v40Tt
+koLhuLfLIkWV49Dpm5L95ZQkXwi7u5Qwo6ROBh0FwlenqoIzfxoHz/PAcahqtXvz
+QMqzSs+Y+QQNxGkGZYyyzdumy2qZB5QzOzSiEa2XHn1QfSeRtxUWIQ61G1CUH3+a
+nbpVHPTx1a2DnM5RkKhmybccvCVt1TwtEQRlVIaIDxqXdppXCq6GEjbY0nO0ZEtt
+qL85E11sORqitZMHOGPMm+XSEhgylMQpMx50IFblitSfobEp3dqp+YLmZYC1LdEh
+Bg9Rj5DZ65S+dviArknIPAo8BkNXKhXNh2hzfITUaHDa5C5tm/CqsGAD6fS+9Ik=
+=0Xrx
 -----END PGP SIGNATURE-----
